Remove JBoss6VFS (#14)